--- a/Frank/Gemfile
+++ b/Frank/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 
-gem 'sinatra'
-gem 'twilio-ruby'
-gem 'yard-sinatra'
+gem 'sinatra', require: 'sinatra/base'
+gem 'sinatra-contrib', require: 'sinatra/reloader'
+gem 'slim'
+gem 'rerun', github: 'alexch/rerun'
+gem 'pg'
+gem 'mysql2', '~> 0.5.2'
+gem 'i18n'
