--- a/Frank/config/en.yml
+++ b/Frank/config/en.yml
@@ -1,5 +1,3 @@
 en:
-  test: "I'm a gender bender"
-  post: "Posts"
-  about_text: "i am bi-lingual"
-  lang: "Change language"
+  test: "Testing roger roger"
+  post: "Wellcome to franks !"
