--- a/Frank/config/se.yml
+++ b/Frank/config/se.yml
@@ -1,5 +1,3 @@
 se:
-  test: "Jag är en kön-böjare"
-  post: "Inlägg"
-  about_text: "jag är bi-linguel"
-  lang: "Byt språk"
+  test: "testar hållå hallå"
+  post: "Vällkomen till franks !"
